Fix CORS: allow Vercel URL